2009-11-11  Marek Safar  <marek.safar@gmail.com>

	* CSharpInvokeBinder.cs, CSharpBinder.cs,
	CSharpInvokeMemberBinder.cs: Convert discarded result expressions.

2009-11-04  Marek Safar  <marek.safar@gmail.com>

	* CSharpIsEventBinder.cs: Dynamic events implementation.
	
	* *.cs: Make CSharpBinder instance and share common checks.

2009-11-03  Marek Safar  <marek.safar@gmail.com>

	* CSharpInvokeConstructorBinder.cs: Dynamic constructors.

2009-10-30  Marek Safar  <marek.safar@gmail.com>

	* CSharpBinder.cs, CSharpInvokeMemberBinder.cs,
	CSharpSetIndexBinder.cs: Simple member binder.

2009-10-23  Marek Safar  <marek.safar@gmail.com>

	* RuntimeBinderContext.cs, Extensions.cs, CSharpBinder.cs: More
	literal and constant work.

2009-10-22  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Cleanup the old API.

2009-10-20  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Update to the latest API.

2009-10-14  Marek Safar  <marek.safar@gmail.com>

	* CSharpBinaryOperationBinder.cs, CSharpGetIndexBinder.cs,
	CSharpGetMemberBinder.cs, CSharpArgumentInfo.cs, CSharpBinder.cs,
	CSharpUnaryOperationBinder.cs, CSharpConvertBinder.cs,
	CSharpSetIndexBinder.cs, CSharpSetMemberBinder.cs: Index setters
	implemented.

2009-10-07  Marek Safar  <marek.safar@gmail.com>

	* RuntimeBinderContext.cs, CSharpBinaryOperationBinder.cs,
	CSharpGetMemberBinder.cs, CSharpBinder.cs,
	CSharpUnaryOperationBinder.cs, CSharpSetMemberBinder.cs: Member
	access implemented.

2009-09-30  Marek Safar  <marek.safar@gmail.com>

	* CSharpBinaryOperationBinder.cs, CSharpBinder.cs,
	CSharpUnaryOperationBinder.cs, CSharpConvertBinder.cs: Implicit
	and explicit conversions implemented.

2009-09-29  Marek Safar  <marek.safar@gmail.com>

	* CSharpBinaryOperationBinder.cs, Extensions.cs, CSharpBinder.cs,
	CSharpUnaryOperationBinder.cs: Dynamic unary expressions.

2009-09-25  Marek Safar  <marek.safar@gmail.com>

	* CSharpBinaryOperationBinder.cs, CSharpBinder.cs: More dynamic
	binary expressions.
